--- a/public/labs/a1/index.html
+++ b/public/labs/a1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lab index.html</title>
 </head>
 <body>
     <h1>HTML Examples</h1>
