--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -12,8 +12,8 @@
         <li>Messages</li>
         <li>Bookmarks</li>
         <li>Lists</li>
-        <li>Profile</li>
-        <li>Tuit</li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="tuit.html">Tuit</a></li>
         <li>Reply</li>
     </ul>
 </body>
