--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -11,5 +11,76 @@
     <img width="48px"
          height="48px"
          src="https://i.insider.com/4efd9b8b69bedd682c000022?width=750&format=jpeg&auto=webp" />
+
+    <form id="textarea">
+        <textarea cols="20" rows="4">What's Happening?</textarea>
+    </form>
+    <select>
+        <option value="EVERYONE">Everyone can reply</option>
+        <option value="FOLLOWING">People you follow</option>
+        <option value="MENTIONED">Only people you mention</option>
+    </select>
+    <p></p>
+    <input type="file" />
+    <input type="button" value="Tuit" />
+    <p></p>
+    <ul>
+        <li>
+            <a href="topic.html">Topic 123</a>
+            <p></p>
+            <img width="48px"
+                 height="48px"
+                 src="https://cdn.wallpapersafari.com/20/90/HGhTb5.png" />
+            <a href="profile.html">Connor</a> @Connor - 2h
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                id est laborum.
+            </p>
+            <a href="reply.html">Reply</a> 123 | <a href="retuit.html">Retuit</a> 234 | <a href="like.html">Like</a> 345 | <a href="share.html">Share</a>
+
+        </li>
+        <p></p>
+        <li>
+            <a href="topic.html">Topic 234</a>
+            <p></p>
+            <img width="48px"
+                 height="48px"
+                 src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/great-eared-nightjar-eurostopodus-macrotis-y1-historic-illustrations.jpg" />
+            <a href="profile.html">Juliana</a> @Juliana - 4h
+            <p>
+                Text documents are often broken up into several sections and subsections.
+                Each section is usually prefaced with a short title or heading that attempts to summarize
+                the topic of the section it precedes. For instance this paragraph is preceded by the
+                heading Heading Tags. The font of the section headings are usually larger and bolder than
+                their subsection headings. This document uses headings to introduce topics such as HTML Documents,
+                HTML Tags, Heading Tags, etc. HTML heading tags can be used to format plain text so that it
+                renders in a browser as large headings. There are 6 heading tags: h1, h2, h3, h4, h5, and h6. Tag
+                h1 is the largest heading and h6 is the smallest heading.
+            </p>
+            <a href="reply.html">Reply</a> 123 | <a href="retuit.html">Retuit</a> 234 | <a href="like.html">Like</a> 345 | <a href="share.html">Share</a>
+
+        </li>
+        <p></p>
+        <li>
+            <a href="topic.html">Topic 456</a>
+            <p></p>
+            <img width="48px"
+                 height="48px"
+                 src="https://yt3.googleusercontent.com/584JjRp5QMuKbyduM_2k5RlXFqHJtQ0qLIPZpwbUjMJmgzZngHcam5JMuZQxyzGMV5ljwJRl0Q=s900-c-k-c0x00ffffff-no-rj" />
+            <a href="profile.html">Youtube</a> @Youtube - 4h
+            <p>
+                A youtube video
+            </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/CCOKI1lYHy8" title="YouTube video player" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
+                    web-share" allowfullscreen></iframe>
+            <a href="reply.html">Reply</a> 123 | <a href="retuit.html">Retuit</a> 234 | <a href="like.html">Like</a> 345 | <a href="share.html">Share</a>
+
+        </li>
+    </ul>
 </body>
 </html>
