--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -5,28 +5,49 @@
     <title>Tuiter Profile</title>
 </head>
 <body>
-    <a href="profile.html">Back</a>
-    <h1>Tuiter </h1>
-    <h2> Profile</h2>
-    <a href="profile.html">Save</a>
-    <img width="100%"
-         height="200px"
-         src="https://static.vecteezy.com/system/resources/previews/003/226/128/original/social-media-marketing-web-banner-digital-marketing-cover-banner-free-vector.jpg" />
-    <p></p>
-    <input type="file" />
-    <p></p>
-    <img width="48px"
-         height="48px"
-         src="https://i.insider.com/4efd9b8b69bedd682c000022?width=750&format=jpeg&auto=webp" />
-    <p></p>
-    <input type="file" />
-    <hr />
-    Name
-    <br />
-    <input id="text-username" placeholder="WebDev" /><br />
-    <hr />
-    Bio
-    <br />
-    <textarea cols="50" rows="10">A generic profile for the Web Dev course to display what a Tuit profile should look like.</textarea>
+    <table>
+        <tr>
+            <td valign="top">
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="#">Explore</a></li>
+                    <li><a href="#">Notifications</a></li>
+                    <li><a href="#">Messages</a></li>
+                    <li><a href="#">Bookmarks</a></li>
+                    <li><a href="#">Lists</a></li>
+                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="tuit.html">Tuit</a></li>
+                    <li><a href="#">Reply</a></li>
+                </ul>
+            </td>
+            <td>
+                <a href="profile.html">Back</a>
+                <h1>Tuiter </h1>
+                <h2> Profile</h2>
+                <a href="profile.html">Save</a>
+                <img width="100%"
+                     height="200px"
+                     src="https://static.vecteezy.com/system/resources/previews/003/226/128/original/social-media-marketing-web-banner-digital-marketing-cover-banner-free-vector.jpg" />
+                <p></p>
+                <input type="file" />
+                <p></p>
+                <img width="48px"
+                     height="48px"
+                     src="https://i.insider.com/4efd9b8b69bedd682c000022?width=750&format=jpeg&auto=webp" />
+                <p></p>
+                <input type="file" />
+                <hr />
+                Name
+                <br />
+                <input id="text-username" placeholder="WebDev" />
+                <br />
+                <hr />
+                Bio
+                <br />
+                <textarea cols="50" rows="10">A generic profile for the Web Dev course to display what a Tuit profile should look like.</textarea>
+            </td>
+        </tr>
+    </table>
 </body>
+
 </html>
