--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -7,14 +7,14 @@
 <body>
     <ul>
         <li><a href="home.html">Home</a></li>
-        <li>Explore</li>
-        <li>Notifications</li>
-        <li>Messages</li>
-        <li>Bookmarks</li>
-        <li>Lists</li>
+        <li><a href="#">Explore</a></li>
+        <li><a href="#">Notifications</a></li>
+        <li><a href="#">Messages</a></li>
+        <li><a href="#">Bookmarks</a></li>
+        <li><a href="#">Lists</a></li>
         <li><a href="profile.html">Profile</a></li>
         <li><a href="tuit.html">Tuit</a></li>
-        <li>Reply</li>
+        <li><a href="#">Reply</a></li>
     </ul>
 </body>
 </html>
