--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -5,36 +5,55 @@
     <title>Tuiter Profile</title>
 </head>
 <body>
-    <a href="navigation.html">Back</a>
-    <h1>Tuiter </h1>
-    <h2> Profile</h2>
-    <img width="100%"
-         height="200px"
-         src="https://static.vecteezy.com/system/resources/previews/003/226/128/original/social-media-marketing-web-banner-digital-marketing-cover-banner-free-vector.jpg" />
-    <p></p>
-    <img width="48px"
-         height="48px"
-         src="https://i.insider.com/4efd9b8b69bedd682c000022?width=750&format=jpeg&auto=webp" />
-    <a href="edit-profile.html">Edit Profile</a>
-    <p></p>
-    <h2>
-        WebDev
-    </h2>
-    @WebDev
-    <p>
-        A generic profile for the Web Dev course to display what a Tuit profile should look like.
-    </p>
-    <p>
-        Joined July 2023
-    </p>
-    <p>
-        <b>123</b> Following <b>234</b> Followers
-    </p>
-    <ul>
-        <li><a href="tuits.html">Tuits</a></li>
-        <li><a href="tuits-and-replies.html">Tuits and Replies</a></li>
-        <li><a href="media.html">Media</a></li>
-        <li><a href="likes.html">Likes</a></li>
-    </ul>
+    <table>
+        <tr>
+            <td valign="top">
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="#">Explore</a></li>
+                    <li><a href="#">Notifications</a></li>
+                    <li><a href="#">Messages</a></li>
+                    <li><a href="#">Bookmarks</a></li>
+                    <li><a href="#">Lists</a></li>
+                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="tuit.html">Tuit</a></li>
+                    <li><a href="#">Reply</a></li>
+                </ul>
+            </td>
+            <td>
+                <a href="navigation.html">Back</a>
+                <h1>Tuiter </h1>
+                <h2> Profile</h2>
+                <img width="100%"
+                     height="200px"
+                     src="https://static.vecteezy.com/system/resources/previews/003/226/128/original/social-media-marketing-web-banner-digital-marketing-cover-banner-free-vector.jpg" />
+                <p></p>
+                <img width="48px"
+                     height="48px"
+                     src="https://i.insider.com/4efd9b8b69bedd682c000022?width=750&format=jpeg&auto=webp" />
+                <a href="edit-profile.html">Edit Profile</a>
+                <p></p>
+                <h2>
+                    WebDev
+                </h2>
+                @WebDev
+                <p>
+                    A generic profile for the Web Dev course to display what a Tuit profile should look like.
+                </p>
+                <p>
+                    Joined July 2023
+                </p>
+                <p>
+                    <b>123</b> Following <b>234</b> Followers
+                </p>
+                <ul>
+                    <li><a href="tuits.html">Tuits</a></li>
+                    <li><a href="tuits-and-replies.html">Tuits and Replies</a></li>
+                    <li><a href="media.html">Media</a></li>
+                    <li><a href="likes.html">Likes</a></li>
+                </ul>
+            </td>
+        </tr>
+    </table>
     </body>
 </html>
