--- a/public/tuiter/explore/explore-css.html
+++ b/public/tuiter/explore/explore-css.html
@@ -1,1 +1,28 @@
-Explore
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Tuiter Explore</title>
+</head>
+<body>
+    <table>
+        <tr>
+            <td valign="top">
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="explore/explore-css.html">Explore</a></li>
+                    <li><a href="#">Notifications</a></li>
+                    <li><a href="#">Messages</a></li>
+                    <li><a href="#">Bookmarks</a></li>
+                    <li><a href="#">Lists</a></li>
+                    <li><a href="profile.html">Profile</a></li>
+                    <li><a href="tuit.html">Tuit</a></li>
+                    <li><a href="#">Reply</a></li>
+                </ul>
+            </td>
+            <td>
+                Something
+            </td>
+        </tr>
+    </table>
+</body>
