added search bar

--- a/public/tuiter/explore/explore-css.html
+++ b/public/tuiter/explore/explore-css.html
@@ -21,7 +21,13 @@
                 </ul>
             </td>
             <td>
-                Something
+                <div class="rounded-corners-all-around">
+
+                    <input type="search"
+                           class="form-control"
+                           id="input1"
+                           placeholder="Search Tuiter">
+                </div>
             </td>
         </tr>
     </table>
