--- a/public/tuiter/bookmarks/bookmarks-css.html
+++ b/public/tuiter/bookmarks/bookmarks-css.html
@@ -17,13 +17,29 @@
 </head>
 
 <body>
-    <div class="wd-inline-img">
-    <span class="wd-title">
-        <i class="fas fa-arrow-left"></i>
-        All Bookmarks
-        <rt class="fa fa-ellipsis-h"></rt>
-        </span>
+    <div class="grid-row">
+        <span class="wd-title">
+            <div class="grid-col-left-sidebar fas fa-arrow-left wd-leftcon"></div>
+            <div class="grid-col-third-page wd-left">All Bookmarks</div>
+            <div class="grid-col-third-page fa fa-ellipsis-h wd-rightcon"></div>
+            </span>
+        <br></br>
         </div>
+    <ul style="list-style: none;">
+        <li class="wd-tuit">
+            <div class="icon">
+                <img src="../../logo192.png"
+                     height="5%"
+                     width="5%"/>
+            </div>
+            <div class="user">
+            Something
+            </div>
+            <divclass="handle">
+            @something    
+            </div>
 
 
+
+        </li>
 </body>
