--- a/public/tuiter/explore/explore-css.html
+++ b/public/tuiter/explore/explore-css.html
@@ -67,9 +67,10 @@
                 <ul style="list-style: none;">
                     <li class="wd-tuit-expl">
                         <ul style="list-style: none;">
-                            <li class="wd-inline-img">
-                                <div class="wd-tuit-head wd-inline-img">
-                                    <div>Trending in News</div><i class="fa fa-ellipsis-h wd-tuit-dots wd-inline-img"></i>
+                            <li>
+                                <div class="wd-tuit-head">
+                                    <div>Trending in News</div><i class="fa fa-ellipsis-h wd-tuit-dots"></i>
+
                                 </div>
                             </li>
                             <li class="wd-tuit-topic">
