--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -215,8 +215,100 @@
                 </ul>
             </div>
             <div class="col">
-                3 of 3
-            </div>
+                <ul class="list-group full">
+                    <li class="list-group-item tuit-stuff">
+                        Who to follow
+                    </li>
+                    <li class="list-group-item">
+                        <div class="container full">
+                            <div class="row">
+                                <div class="col to-left">
+                                    <img src="../../logo192.png"
+                                         height="60%"
+                                         width="50%" />
+                                </div>
+                                <div class="col to-left">
+                                    <div class="tuit-stuff">
+                                        username
+                                    </div>
+                                    <div class="tuit-heading">
+                                        @user-name
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <a class="btn btn-primary rounded-pill" href="../tuit.html" role="button" class="sidebar">Follow</a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="container full">
+                            <div class="row">
+                                <div class="col to-left">
+                                    <img src="../../logo192.png"
+                                         height="60%"
+                                         width="50%" />
+                                </div>
+                                <div class="col to-left">
+                                    <div class="tuit-stuff">
+                                        username
+                                    </div>
+                                    <div class="tuit-heading">
+                                        @user-name
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <a class="btn btn-primary rounded-pill" href="../tuit.html" role="button" class="sidebar">Follow</a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="container full">
+                            <div class="row">
+                                <div class="col to-left">
+                                    <img src="../../logo192.png"
+                                         height="60%"
+                                         width="50%" />
+                                </div>
+                                <div class="col to-left">
+                                    <div class="tuit-stuff">
+                                        username
+                                    </div>
+                                    <div class="tuit-heading">
+                                        @user-name
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <a class="btn btn-primary rounded-pill" href="../tuit.html" role="button" class="sidebar">Follow</a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="container full">
+                            <div class="row">
+                                <div class="col to-left">
+                                    <img src="../../logo192.png"
+                                         height="60%"
+                                         width="50%" />
+                                </div>
+                                <div class="col to-left">
+                                    <div class="tuit-stuff">
+                                        username
+                                    </div>
+                                    <div class="tuit-heading">
+                                        @user-name
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <a class="btn btn-primary rounded-pill" href="../tuit.html" role="button" class="sidebar">Follow</a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+</div>
         </div>
     </div>
 </body>
