--- a/public/tuiter/explore/explore-css.html
+++ b/public/tuiter/explore/explore-css.html
@@ -22,7 +22,9 @@
             <td valign="top">
                 <ul>
                     <li><a href="../home.html">Home</a></li>
-                    <li><a href="explore/explore-css.html">Explore (CSS)</a></li>
+                    <li><a href="explore-css.html">Explore (CSS)</a></li>
+                    <li><a href="index.html">Explore</a></li>
+
                     <li><a href="#">Notifications</a></li>
                     <li><a href="#">Messages</a></li>
                     <li><a href="../bookmarks/bookmarks-css.html">Bookmarks</a></li>
