--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -16,6 +16,7 @@
         <li><a href="profile.html">Profile</a></li>
         <li><a href="tuit.html">Tuit</a></li>
         <li><a href="#">Reply</a></li>
+        <li>Something</li>
     </ul>
 </body>
 </html>
